add config file and remove old build files. make fields private